--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 /target
-.gitignore
-test.png
-out.png
-teapot.png
-*.obj
-*.mtl
-src/default.scn
-!teapot1.obj
+
+/.gitignore
+
+/*.png
+/!demo*.png
+
+/*.obj
+/*.mtl
+/!teapot1.obj
+
+/src/default.scn
+
 /newell_teaset/
